[Mac] Fullscreen Toolbar Animation Fix

- Fixed the animation so that the toolbar animates in when it's locked
by an object

BUG=659752

Review-Url: https://codereview.chromium.org/2542803002
Cr-Commit-Position: refs/heads/master@{#435659}

Former-commit-id: 9d140c92c5c769bc3e11c642b0de2d69c4a9f3a3